# sort-It-Out

./: .gitignore  .pre-commit-config.yaml  .tmp_gui_check.py  BUILDING_EXECUTABLES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  launcher.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: generate-release-notes.js
.github/workflows/: ci.yml  python-ci.yml  release.yml  update-changelog-on-tag.yml  validate-changelog.yml
docs/: api.md  changelog-hooks.md  ci.md  datasets.md  gen_data.md  index.md  pre-commit.md  testing.md
docs/alghorythms/: bubble.md  bucket.md  cocktail.md  comb.md  counting.md  gnome.md  heap.md  index.md  insertion.md  merge.md  quick.md  radix.md  selection.md  shell.md
docs/algorithms/: bubble.md  bucket.md  cocktail.md  comb.md  counting.md  gnome.md  heap.md  index.md  insertion.md  merge.md  quick.md  radix.md  selection.md  shell.md
docs/scripts/: check_unreleased.md  gen_data.md  install_hooks.md  local_pre_push.md  preview_changelog_pr.md  update_all_tags.md  update_changelog.md
scripts/: _apply_branch_protection.py  check_unreleased.py  gen_data.py  install_hooks.py  local_pre_commit.py  local_pre_push.py  preview_changelog_pr.py  update_all_tags.py  update_changelog.py
src/sort_it_out/: __init__.py  _version.py  algorithms.py  cli.py  gui.py  sorts.py
src/your_package/: __init__.py
tests/: conftest.py  test_sorts.py
