[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sort-it-out"
version = "0.1.0"
description = "SortItOut — small utility project for sorting helpers and examples."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Giovanni Lauria", email = "giovanni.lauria@gmail.com" } ]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 88
