[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sort-it-out"
version = "0.2.1"
description = "SortItOut — a small educational collection of handwritten sorting algorithms, CLI and GUI tooling, and timing helpers for benchmarking."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Giovanni Lauria", email = "giovanni.lauria@gmail.com" } ]
dependencies = [
    "Markdown",
    "tkhtmlview",
]

# Current project status: Beta/early-stable. Core features implemented (algorithms,
# CLI, GUI, tests, packaging guidance and CI). Ongoing work: release automation
# robustness, Windows executable artifacts and packaging improvements.
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]

[project.scripts]
sortItOut = "sort_it_out.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.setuptools_scm]
write_to = "src/sort_it_out/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"
line_length = 88
